...
class _HomePageState extends State<HomePage> {
  @override
  Widget build(BuildContext context) {
    return Consumer<GlobalProvider>(
      builder: (context, globalProvider, _) => Scaffold(
        appBar: EasySearchBar(
          key: const Key("searchBar"),
          title: const Text(
            "Restaurant",
            style: TextStyle(
              fontWeight: FontWeight.bold,
              color: Colors.white,
            ),
...
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          const Padding(
            padding: EdgeInsets.all(12),
            child: Text(
              "Recommendation for you",
              style: TextStyle(fontSize: 24, fontWeight: FontWeight.bold),
            ),
          ),
          _corouselSliderCostum(context, state.byRating),
          const Padding(
            padding: EdgeInsets.all(12.0),
            child: Text(
              "Explore Restaurant",
              style: TextStyle(fontSize: 24, fontWeight: FontWeight.bold),
            ),
          ),
          AnimationLimiter(
            child: ListView.builder(
              shrinkWrap: true,
...
